<resources>
    <string name="app_name">GYMUP!</string>
    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="gymList">Listado de Gimnasios</string>
    <string name="aboutUs">Nosotros</string>
    <string name="services">Servicios</string>
    <string name="contact">Contacto</string>
    <string name="users">Usuarios</string>
    <string name="userProfile">Perfil del Usuario</string>
    <string name="nutrition">Salud y Nutrición</string>

    <!-- Para AdminServices-->
    <string name="services_tipo">Seleccione tipo de servicio:</string>
    <string name="Hola">Hola</string>

    <!-- Para AdminAbout-->
    <string name="about_gim">Aca va el nombre del gim</string>
    <string name="about_mision">Misión:</string>
    <string name="about_vision">Visión:</string>
    <string name="about_content_mision">Agregar información sobre Misión</string>
    <string name="about_content_vision">Agregar información sobre Visión</string>

    <!-- Para AdminOffers-->
    <string name="offer_gim">Aca va el nombre del gim</string>
    <string name="offer_title">Titulo</string>
    <string name="offer_content">Titulo</string>
    <string name="offer_button">Guardar</string>

    <!-- Para formulario de registro-->
    <string name="register">Registro</string>
    <string name="register2">Registrarse</string>
    <string name="userRegister">Registro de Usuario</string>
    <string name="fullName">Nombre Completo</string>
    <string name="document">Documento de Identidad</string>
    <string name="cellphone">Celular</string>
    <string name="address">Dirección</string>
    <string name="height">Altura (cm)</string>
    <string name="weight">Peso</string>
    <string name="repeatPassword">Repita la Contraseña</string>
    <string name="gender">Género</string>
    <string name="loginUser">Inicio de sesión</string>
    <string name="username">Nombre de usuario</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="city">Ciudad</string>
    <string name="postalCode">Código postal</string>
    <string name="country">País</string>
    <string name="phoneNumber">Teléfono</string>
    <string name="userName">Usuario</string>
    <string name="status">Estado</string>
    <string name="comments">Comentarios</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="selectDate">Fecha de nacimiento</string>
    <string name="selectGym">Selecciona un gimnasio</string>

    <!--Para el perfil del usuario -->
    <string name="editProfile">Editar perfil</string>
    <string name="updateData">Actualizar datos</string>
    <string name="editPassword">Cambio de contraseña</string>
    iokkkkkkkkkkk


    <string name="IngresarUsuario">Ingresar</string>
    <string name="notienecuenta">¿No tienes registro? <b>Registrate aquí</b></string>
    <string name="agenda">Agenda</string>
    <string name="clientes">Clientes</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="servicios">Servicios</string>
    <string name="mi_about">Acerca de mí</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="nombregimnasio">Nombre del Gimnasio</string>
    <string name="direccionprincipal">Dirección Principal</string>
    <string name="telefonoprincipal">Teléfono Principal</string>
    <string name="telMovil">Teléfono móvil</string>
    <string name="Email">Correo electrónico</string>
    <string name="Ciudad">Ciudad</string>
    <string name="Estado">Estado / Departamento</string>
    <string name="RUT">RUT / Registro Mercantil</string>
    <string name="NombrePropietario">Nombre del Propietario</string>
    <string name="MovilPropietario">Móvil Propietario</string>
    <string name="EmailDueno">Correo electrónico del Propietario</string>
    <string name="passwordueno">Contraseña del Propietario</string>
    <string name="ActualizarDatos">Actualizar datos</string>
    <string name="area_del_cliente">Área del cliente</string>
    <string name="reservas">Reservas</string>
    <string name="mi_salud">Mi Salud</string>
    <string name="balance">Balance</string>
    <string name="estado_de_cuenta">Estado de Cuenta</string>
    <string name="salud_y_nutrici_n">Salud y Nutrición</string>
    <string name="mensaje_a_ser_enviado">Mensaje a ser enviado</string>
    <string name="t_tulo_o_asunto">Título o Asunto</string>
    <string-array name="genderList">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>

    <!-- Prueba para servicios -->
    <string-array name="servicesList">
        <item>Natación</item>
        <item>Funcional</item>
        <item>Yoga</item>
        <item>Pilates</item>
        <item>Musculación</item>
        <item>Crossfit</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>